# personal-site

./: .gitignore  LICENSE  LICENSE(pandoc-sitenote)  README.md  contact.md  index.md  personal-site.cabal  personal.md  site.hs  stack.yaml
bibliography/: Citations.bib  bib.csl
content/: 2017.md  2018.md  2019.md  PaperNotes.md  Projects.md  TopicNotes.md  books.md  graded-oriented.tex  learning-experiment.md  projects.md
content/2017/: 2017.aux  2017.md
content/2018/: 2018.aux  2018.md
content/2019/: 2019.aux  2019.md
content/Citations/: Citations-Books.bib  Citations.bib
content/PaperNotes/: AlignmentForum.md  Bousfield-LSWH.md  CompositionalReaction.md  FST-backprop.md  HH19.md  Hedges17.md  HypergraphCategories.md  Master19.md  PaperNotes.md  SSV16.md  SY2019.md  Spivak19.md  TuringCategories.md  index.md
content/Projects/: AlignmentResearchOverview.md  BrickDiagrams.md  OpenAgents.md  Projects.md  index.md  proj1.md
content/TopicNotes/: AlgebraicTopology.md  CategoricalLogic.md  TopicNotes.fdb_latexmk  TopicNotes.fls  TopicNotes.md  index.md
content/notes/: 2017-06-11.md  2017-06-16.md  2017-07-05.md  2017-07-06.md  2017-07-10.md  2017-07-11.md  2017-07-12.md  2017-08-11.md  2017-08-22.md  2017-10-04.md  2017-10-20.md  2017-10-25.md  2017-10-26.md  2017-10-29.md  2017-11-01.md  2017-11-04.md  (+72 more)
css/: gwern.css  hakyll.css  tufte.css
js/: sidenotes.js
pdfs/: Ekroot.pdf.metadata  bach-projekt.pdf.metadata
templates/: archive.html  default.html  index.html  pdf-list.html  post-list.html  post.html  tex-commands.tex  tikzcd.tex  tikzpicture.tex
(+186 files in other folders)
