name:               personal-site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll >= 4.7.5.2
                  , containers >= 0.5.11.0
                  , pandoc >= 1.15.2.1
                  , pandoc-types == 1.17.*
                  , mtl == 2.2.*
                  , bytestring == 0.10.*
                  , uri-encode == 1.5.*
                  , parsec == 3.1.*
                  , bibtex == 0.1.*
                  , filepath == 1.4.*
  ghc-options:      -threaded
  default-language: Haskell2010
